workspace.cpp
@@ -159,6 +159,7 @@ Workspace::Workspace(const QString &sessionKey)
 
     RuleBook::create(this)->load();
 
+    kwinApp()->createScreens();
     ScreenEdges::create(this);
 
     // VirtualDesktopManager needs to be created prior to init shortcuts
@@ -198,7 +199,6 @@ Workspace::Workspace(const QString &sessionKey)
 void Workspace::init()
 {
     KSharedConfigPtr config = kwinApp()->config();
-    kwinApp()->createScreens();
     Screens *screens = Screens::self();
     // get screen support
     connect(screens, SIGNAL(changed()), SLOT(desktopResized()));
